--- a/Web Proje/Anasayfa.css
+++ b/Web Proje/Anasayfa.css
@@ -2,82 +2,48 @@
     box-sizing: border-box;
 }
 
-.header1{
-    background-color:#F67280 ;
-    padding: 8px 16px;
-    margin: 0;
-    border-style: double;
+.navbar-nav a{
+    color:#F67280;
     
 }
 
-.nav1{
-   
-   display: inline-flex;
-   position: relative;
-   float: right;
-   
-}
-
-.logo{
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 32px;
-    margin-right: 60px;
-    display: inline-block;
+.navbar-brand{
     font-style: oblique;
-    color: black;
-}
-
-.ul1{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    
-}
-
-.ul1 a{
-    text-decoration: none;
-    color: black;
-    
-}
-
-.li1{
-    display: inline-block;
-    padding: 0 20px;
-    font-size: 20px;
-    
-}
-
-.li1 ::before{
-    content: '\273F';
-    color: black;
 }
 
 .anasayfa{
+    margin: 35px;
     float: left;
-    
-    
-    display: flex;
-    
-    height: 550px;
+    display: inline-flex; 
+    flex-wrap: wrap;
     align-items: center;
+    width: 40%;
 }
 
 .anasayfa2{
+    display: inline-flex;
     float: right;
-    
-   
+    flex-wrap: wrap;
+    width: 47%;
 }
 
 .anasayfa_yazi1{
-    font-size: 70px;
+    font-size: 35px;
+    font-family:cursive;
 }
 
-.anasayfa_yazi2{
-    font-size: 50px;
-    color: black;
+
+
+body
+{background-image: url(arkaplan.jpg);}
+
+.maddeler{
+    
+    display: inline-flex;
+    flex-wrap: wrap;
+    margin: 30px;
+    padding: 16px;
+    width: 30%;
     text-align: center;
 }
-
-body{background-image: url(arkaplan.jpg);}
 
