--- a/Web Proje/Sehrim.css
+++ b/Web Proje/Sehrim.css
@@ -11,3 +11,18 @@
     font-style: oblique;
 }
 
+.col img{
+    height: 400px;
+    margin: 20px;
+    border-radius: 30px;
+}
+.carousel.carousel-dark.slide{
+    margin-top: 30px;
+    border-style: inset;
+    border-width: 10px;
+    border-color: #F67280;
+}
+
+.sakarya h1{
+    margin-top: 15px;
+}
