--- a/Web Proje/css/IlgiAlanlarım.css
+++ b/Web Proje/css/IlgiAlanlarım.css
@@ -10,3 +10,44 @@
 .navbar-brand{
     font-style: oblique;
 }
+
+body {
+    font-family: Arial, sans-serif;
+
+ 
+    background-color: #f0f0f0;
+  
+}
+
+.container {
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#cat-image-container {
+    margin-top: 20px;
+}
+
+#cat-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    display: none; /* Gizli başlat */
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
