--- a/Web Proje/css/IlgiAlanlarim.css
+++ b/Web Proje/css/IlgiAlanlarim.css
@@ -38,16 +38,17 @@ body {
     display: none; /* Gizli başlat */
 }
 
-button {
+.container button {
+    margin: 5px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    background-color: #007bff;
+    background-color: #F67280;
     color: #fff;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #0080b3;
 }
